# vid-extras

./: .gitignore  AGENTS.md  BUGFIX_FILENAME_COLLISION.md  BUG_FIX_SUMMARY.md  CHANGELOG_CATEGORIES.md  CHANGELOG_CONFIG.md  CONTENT_LIMITS_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  config.cfg.example  test_candidate.json  test_deser.rs  test_output.txt
.github/workflows/: main.yml
.kiro/hooks/: code-review-hook.kiro.hook
.kiro/steering/: code quality.md  product.md  structure.md  tech.md
_bmad-output/implementation-artifacts/: 1-1-replace-sourcemode-with-sources-cli.md  1-2-refactor-discovery-orchestrator-per-source-error-isolation.md  1-3-dry-run-mode.md  1-4-per-source-summary-statistics-and-security-hardening.md  2-1-extend-content-category-enum-and-organizer-mappings.md  2-2-expand-category-classification-logic.md  3-1-numeric-filename-normalization-and-sequential-numbering.md  3-2-non-english-subtitle-auto-download.md  4-1-archive-org-expanded-queries.md  4-2-tmdb-collections-discovery.md  5-1-kinocheck-discoverer-as-tmdb-fallback.md  6-1-dailymotion-rest-api-discoverer.md  6-2-dailymotion-download-via-yt-dlp.md  7-1-duplicate-detection-engine.md  7-2-deduplication-reporting-in-summary.md  8-1-vimeo-personal-access-token-management.md  8-2-vimeo-rest-api-discoverer.md  deferred-work.md
_bmad-output/planning-artifacts/: epics.md  prd.md  technical-research-additional-extras-sources.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
proptest-regressions/: converter.txt  discovery.txt  orchestrator.txt  organizer.txt  scanner.txt  validation.txt
proptest-regressions/discovery/: series_tmdb.txt
src/: cli.rs  config.rs  converter.rs  deduplication.rs  discovery.rs  downloader.rs  error.rs  json_output.rs  lib.rs  main.rs  models.rs  orchestrator.rs  organizer.rs  output.rs  scanner.rs  tui.rs  validation.rs
src/discovery/: archive.rs  bilibili.rs  dailymotion.rs  fuzzy_matching.rs  id_bridge.rs  kinocheck.rs  mod.rs  orchestrator.rs  (+15 more)
tests/: discovery_retry_tests.rs  main_integration_tests.rs  series_integration_tests.rs
(+12 files in other folders)
