[package]
name = "extras_fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "extras_fetcher"
path = "src/main.rs"

[lib]
name = "extras_fetcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
chrono = "0.4"
tempfile = "3.13"
