[package]
name = "extras_fetcher"
version = "0.9.1"
edition = "2024"

[[bin]]
name = "extras_fetcher"
path = "src/main.rs"

[lib]
name = "extras_fetcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
log = "0.4"
env_logger = "0.11"
regex = "1.12"  
thiserror = "2.0"
urlencoding = "2.1"
chrono = "0.4"

[dev-dependencies]
proptest = "1.10"
tempfile = "3.25"

[profile.release]
lto = true       # Enable Link Time Optimization
strip = true     # Automatically strip symbols from the binary